--- a/index.html
+++ b/index.html
@@ -157,16 +157,268 @@
                         <a href="#">更多</a>
                     </div>
                     <div class="news-bd">
-
+                        <ul>
+                            <li><a href="#">【特惠】爆款耳机5折秒</a></li>
+                            <li><a href="#">【特惠】爆款耳机5折秒</a></li>
+                            <li><a href="#">【特惠】爆款耳机5折秒</a></li>
+                            <li><a href="#">【特惠】爆款耳机5折秒</a></li>
+                            <li><a href="#">【特惠】爆款耳机5折秒</a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="lifeservice">
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <i class="lifeservice_ico lifeservice_huafei"></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li> <a href="#">
+                                <i class="lifeservice_ico lifeservice_jipiao"></i>
+                                <p>机票</p>
+                            </a>
+                            <span class="hot">
 
+                            </span></li>
+                        <li> <a href="#">
+                                <i class="lifeservice_ico lifeservice_huafei"></i>
+                                <p>话费</p>
+                            </a></li>
+                        <li> <a href="#">
+                                <i class="lifeservice_ico lifeservice_huafei"></i>
+                                <p>话费</p>
+                            </a></li>
+                        <li> <a href="#">
+                                <i class="lifeservice_ico lifeservice_huafei"></i>
+                                <p>话费</p>
+                            </a></li>
+                        <li> <a href="#">
+                                <i class="lifeservice_ico lifeservice_huafei"></i>
+                                <p>话费</p>
+                            </a></li>
+                        <li> <a href="#">
+                                <i class="lifeservice_ico lifeservice_huafei"></i>
+                                <p>话费</p>
+                            </a></li>
+                        <li> <a href="#">
+                                <i class="lifeservice_ico lifeservice_huafei"></i>
+                                <p>话费</p>
+                            </a> <a href="#">
+                                <i class="lifeservice_ico lifeservice_huafei"></i>
+                                <p>话费</p>
+                            </a> <a href="#">
+                                <i class="lifeservice_ico lifeservice_huafei"></i>
+                                <p>话费</p>
+                            </a></li>
+                        <li> <a href="#">
+                                <i class="lifeservice_ico lifeservice_huafei"></i>
+                                <p>话费</p>
+                            </a></li>
+                        <li> <a href="#">
+                                <i class="lifeservice_ico lifeservice_huafei"></i>
+                                <p>话费</p>
+                            </a></li>
+                        <li> <a href="#">
+                                <i class="lifeservice_ico lifeservice_huafei"></i>
+                                <p>话费</p>
+                            </a></li>
+
+                    </ul>
                 </div>
                 <div class="bargain">
                     <img src="upload/bargain.jpg" alt="">
                 </div>
             </div>
+        </div>
+
+        <!-- 推荐模块 -->
+        <div class="recommend w">
+            <div class="recom-hd">
+                <img src="img/clock.png" alt="">
+                <h3>今日推荐</h3>
+            </div>
+            <div class="recom-bd">
+                <ul>
+                    <li><a href="#"><img src="upload/pic.jpg" alt=""></a></li>
+                    <li><a href="#"><img src="upload/pic.jpg" alt=""></a></li>
+                    <li><a href="#"><img src="upload/pic.jpg" alt=""></a></li>
+                    <li class="last"><a href="#"><img src="upload/pic.jpg" alt=""></a></li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- 楼层区 -->
+        <div class="floor">
+            <!-- 一楼 家电 -->
+            <div class="jiadian w">
+                <div class="box-hd">
+                    <h3>家用电器</h3>
+                    <div class="tab-list">
+                        <ul>
+                            <li><a href="#" class="style-red">热门</a>|</li>
+                            <li><a href="#">大家电</a>|</li>
+                            <li><a href="#">生活电器</a>|</li>
+                            <li><a href="#">厨房电器</a>|</li>
+                            <li><a href="#">个护健康</a>|</li>
+                            <li><a href="#">应季电器</a>|</li>
+                            <li><a href="#">空气/净水</a>|</li>
+                            <li><a href="#">新奇特</a>|</li>
+                            <li><a href="#">高端电器</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="box-bd">
+                    <!-- 热门 -->
+                    <ul class="tab-con">
+                        <li class="w209">
+                            <ul class="tab-con-list">
+                                <li><a href="#">节能补贴</a></li>
+                                <li><a href="#">4K电视</a></li>
+                                <li><a href="#">空气净化器</a></li>
+                                <li><a href="#">IH电饭煲</a></li>
+                                <li><a href="#">滚筒洗衣机</a></li>
+                                <li><a href="#">电热水器</a></li>
+                            </ul>
+                            <a href="#"><img src="upload/floor-1-1.png" alt=""></a>
+                        </li>
+                        <li class="w329">
+                            <img src="upload/pic1.jpg" alt="">
+                        </li>
+                        <li class="w219">
+                            <div class="tab-con-item">
+                                <a href="#">
+                                    <img src="upload/floor-1-2.png" alt="">
+                                </a>
+                            </div>
+
+                            <div class="tab-con-item">
+                                <a href="#">
+                                    <img src="upload/floor-1-3.png" alt="">
+                                </a>
+                            </div>
+                        </li>
+                        <li class="w220">
+                            <div class="tab-con-item">
+                                <a href="#">
+                                    <img src="upload/floor-1-4.png" alt="">
+                                </a>
+                            </div>
+                        </li>
+                        <li class="w220">
+                            <div class="tab-con-item">
+                                <a href="#">
+                                    <img src="upload/floor-1-5.png" alt="">
+                                </a>
+                            </div>
+
+                            <div class="tab-con-item">
+                                <a href="#">
+                                    <img src="upload/floor-1-6.png" alt="">
+                                </a>
+                            </div>
+                        </li>
+                    </ul>
+                    <!--  -->
+                    <!-- <ul class="tab-con">
+                            <li>1</li>
+                            <li>2</li>
+                            <li>3</li>
+                            <li>4</li>
+                            <li>5</li>
+                        </ul> -->
+                </div>
+            </div>
+
+            <!-- 二楼 -->
+            <div class="jiadian w">
+                <div class="box-hd">
+                    <h3>手机通讯</h3>
+                    <div class="tab-list">
+                        <ul>
+                            <li><a href="#" class="style-red">热门</a>|</li>
+                            <li><a href="#">大家电</a>|</li>
+                            <li><a href="#">生活电器</a>|</li>
+                            <li><a href="#">厨房电器</a>|</li>
+                            <li><a href="#">个护健康</a>|</li>
+                            <li><a href="#">应季电器</a>|</li>
+                            <li><a href="#">空气/净水</a>|</li>
+                            <li><a href="#">新奇特</a>|</li>
+                            <li><a href="#">高端电器</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="box-bd">
+                    <!-- 热门 -->
+                    <ul class="tab-con">
+                        <li class="w209">
+                            <ul class="tab-con-list">
+                                <li><a href="#">节能补贴</a></li>
+                                <li><a href="#">4K电视</a></li>
+                                <li><a href="#">空气净化器</a></li>
+                                <li><a href="#">IH电饭煲</a></li>
+                                <li><a href="#">滚筒洗衣机</a></li>
+                                <li><a href="#">电热水器</a></li>
+                            </ul>
+                            <a href="#"><img src="upload/floor-1-1.png" alt=""></a>
+                        </li>
+                        <li class="w329">
+                            <img src="upload/pic1.jpg" alt="">
+                        </li>
+                        <li class="w219">
+                            <div class="tab-con-item">
+                                <a href="#">
+                                    <img src="upload/floor-1-2.png" alt="">
+                                </a>
+                            </div>
+
+                            <div class="tab-con-item">
+                                <a href="#">
+                                    <img src="upload/floor-1-3.png" alt="">
+                                </a>
+                            </div>
+                        </li>
+                        <li class="w220">
+                            <div class="tab-con-item">
+                                <a href="#">
+                                    <img src="upload/floor-1-4.png" alt="">
+                                </a>
+                            </div>
+                        </li>
+                        <li class="w220">
+                            <div class="tab-con-item">
+                                <a href="#">
+                                    <img src="upload/floor-1-5.png" alt="">
+                                </a>
+                            </div>
+
+                            <div class="tab-con-item">
+                                <a href="#">
+                                    <img src="upload/floor-1-6.png" alt="">
+                                </a>
+                            </div>
+                        </li>
+                    </ul>
+                    <!--  -->
+                    <!-- <ul class="tab-con">
+                                <li>1</li>
+                                <li>2</li>
+                                <li>3</li>
+                                <li>4</li>
+                                <li>5</li>
+                            </ul> -->
+                </div>
+            </div>
+        </div>
+
+        <!-- 固定电梯 -->
+        <div class="fixedtool">
+            <ul>
+                <li class="current">家用电器</li>
+                <li>手机通讯</li>
+                <li>电脑办公</li>
+                <li>家居家具</li>
+            </ul>
         </div>
     </div>
 
