第三次提交

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="dd">
                     <ul>
                         <li class="menu_item"><a href="#">家用电器</a><i class="fr"></i></li>
-                        <li class="menu_item"><a href="#">手机、数码、通信</a><i class="fr"></i></li>
+                        <li class="menu_item"><a href="list.html">手机、数码、通信</a><i class="fr"></i></li>
                         <li class="menu_item"><a href="#">电脑、办公</a> <i></i> </li>
                         <li class="menu_item"><a href="#">家居、家具、家装、厨具</a> <i></i> </li>
                         <li class="menu_item"><a href="#">男装、女装、童装、内衣</a> <i></i> </li>
