--- a/detail.html
+++ b/detail.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>列表页-手机页面</title>
+    <title>拼刀刀(PDD.COM)-正品低价、品质保障、配送及时、轻松购物！</title>
     <meta name="description"
         content="拼刀刀PDD.COM-专业的综合网上购物商城,销售家电、数码通讯、电脑、家居百货、服装服饰、母婴、图书、食品等数万个品牌优质商品.便捷、诚信的服务，为您提供愉悦的网上购物体验!">
     <meta name="keywords" content="网上购物,网上商城,手机,笔记本,电脑,MP3,CD,VCD,DV,相机,数码,配件,手表,存储卡,拼刀刀"">
@@ -15,10 +15,12 @@
     <link rel="stylesheet" href="css/base.css">
     <!-- 引入 公共样式的css文件 -->
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/list.css">
+    <!-- 引入首页样式 -->
+    <link rel="stylesheet" href="css/detail.css">
 </head>
 
 <body>
+
     <!-- 顶部快捷导航 shortcut star-->
     <div class="shortcut">
         <!-- 版心 w-->
@@ -62,8 +64,6 @@
     </div>
     <!-- 顶部快捷导航 end-->
 
-
-    <!--  -->
     <!-- 头部区域 -->
     <div class="header w">
         <div class="logo">
@@ -73,7 +73,6 @@
                 </a>
             </h1>
         </div>
-        <div class="sk"><img src="upload/sk.png" alt=""></div>
         <div class="search">
             <input type="text" class="text" value="请输入内容...">
             <button class="btn">搜素</button>
@@ -96,199 +95,84 @@
     </div>
     <div class="nav">
         <div class="w">
-            <div class="sk_list fl">
-                <ul>
-                    <li><a href="#">秒杀</a></li>
-                    <li><a href="#">即将售罄</a></li>
-                    <li><a href="#">超值低价</a></li>
-                </ul>
+            <div class="dorpdown fl">
+                <div class="dt">商品分类</div>
+                <div class="dd" style="display: none;">
+                    <ul>
+                        <li class="menu_item"><a href="#">家用电器</a><i class="fr"></i></li>
+                        <li class="menu_item"><a href="#">手机、数码、通信</a><i class="fr"></i></li>
+                        <li class="menu_item"><a href="#">电脑、办公</a> <i></i> </li>
+                        <li class="menu_item"><a href="#">家居、家具、家装、厨具</a> <i></i> </li>
+                        <li class="menu_item"><a href="#">男装、女装、童装、内衣</a> <i></i> </li>
+                        <li class="menu_item"><a href="#">个户化妆、清洁用品、宠物</a> <i></i> </li>
+                        <li class="menu_item"><a href="#">鞋靴、箱包、珠宝、奢侈品</a> <i></i> </li>
+                        <li class="menu_item"><a href="#">运动户外、钟表</a> <i></i> </li>
+                        <li class="menu_item"><a href="#">汽车、汽车用品</a> <i></i> </li>
+                        <li class="menu_item"><a href="#">母婴、玩具乐器</a> <i></i> </li>
+                        <li class="menu_item"><a href="#">食品、酒类、生鲜、特产</a> <i></i> </li>
+                        <li class="menu_item"><a href="#">医药保健</a> <i></i> </li>
+                        <li class="menu_item"><a href="#">图书、音像、电子书</a> <i></i> </li>
+                        <li class="menu_item"><a href="#">彩票、旅行、充值、票务</a> <i></i> </li>
+                        <li class="menu_item"><a href="#">理财、众筹、白条、保险</a> <i></i> </li>
+
+                    </ul>
+                </div>
             </div>
-            <div class="sk_con fl">
+            <div class="navitems fl">
                 <ul>
-                    <li><a href="#">女装</a></li>
-                    <li><a href="#">男装</a></li>
-                    <li><a href="#" class="style-red">男鞋</a></li>
-                    <li><a href="#">女鞋</a></li>
-                    <li><a href="#">母婴童装</a></li>
-                    <li><a href="#">智能数码</a></li>
-                    <li><a href="#">运动户外</a></li>
-                    <li><a href="#">食品</a></li>
-                    <li><a href="#">更多分类</a></li>
+                    <li><a href="#">服装城</a></li>
+                    <li><a href="#">美妆城</a></li>
+                    <li><a href="#">苏布城</a></li>
+                    <li><a href="#">全球购</a></li>
+                    <li><a href="#">闪购</a></li>
+                    <li><a href="#">拍卖</a></li>
+                    <li><a href="#">有趣</a></li>
                 </ul>
             </div>
         </div>
     </div>
 
-    <!-- 列表页的内容区域 -->
-    <div class="sk_container w">
-        <!-- 头部 -->
-        <div class="sk_hb">
-            <img src="upload/bg_03.png" alt="">
+    <!-- 详情页 -->
+    <div class="de_container w">
+        <!-- 面包屑导航 -->
+        <div class="crumb_wrap">
+            <a href="#">手机、数码、通信</a>
+            ><a href="#">手机</a>
+            ><a href="#">Apple苹果</a>
+            ><a href="#">iphone 6S Plus系类</a>
         </div>
-        <!-- 中间部分 -->
-        <div class="sk_bd clearfix">
-            <ul>
-                <li class="sk_goods">
-                    <a href="detail.html">
-                        <img src="upload/mobile.jpg" alt="">
-                        <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
+        <!-- 产品介绍模块 -->
+        <div class="product_intro clearfix">
+            <!-- 预览区域 -->
+            <div class="preview_wrap fl">
+                <div class="preview_img">
+                    <img src="upload/s3.png" alt="">
+                </div>
+                <div class="preview_list">
+                    <a href="#" class="arrow_prev">
                     </a>
-                    <p class="sk_goods_price">
-                        <em>￥6088</em>
-                        <del>￥6988</del></p>
-                    <div class="sk_goods_progress">
-                        已售<i>87%</i>
-                        <div class="bar">
-                            <div class="bar_in">
-                            </div>
-                        </div>
-                        剩余<em>29</em>件
-                    </div>
-                    <a href="#" class="sk_goods_buy">立即抢购</a>
-
-                </li>
-                <li class="sk_goods">
-                    <img src="upload/mobile.jpg" alt="">
-                    <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
-                    <p class="sk_goods_price">
-                        <em>￥6088</em>
-                        <del>￥6988</del></p>
-                    <div class="sk_goods_progress">
-                        已售<i>87%</i>
-                        <div class="bar">
-                            <div class="bar_in">
-                            </div>
-                        </div>
-                        剩余<em>29</em>件
-                    </div>
-                    <a href="#" class="sk_goods_buy">立即抢购</a>
-
-                </li>
-                <li class="sk_goods">
-                    <img src="upload/mobile.jpg" alt="">
-                    <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
-                    <p class="sk_goods_price">
-                        <em>￥6088</em>
-                        <del>￥6988</del></p>
-                    <div class="sk_goods_progress">
-                        已售<i>87%</i>
-                        <div class="bar">
-                            <div class="bar_in">
-                            </div>
-                        </div>
-                        剩余<em>29</em>件
-                    </div>
-                    <a href="#" class="sk_goods_buy">立即抢购</a>
-
-                </li>
-                <li class="sk_goods">
-                    <img src="upload/mobile.jpg" alt="">
-                    <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
-                    <p class="sk_goods_price">
-                        <em>￥6088</em>
-                        <del>￥6988</del></p>
-                    <div class="sk_goods_progress">
-                        已售<i>87%</i>
-                        <div class="bar">
-                            <div class="bar_in">
-                            </div>
-                        </div>
-                        剩余<em>29</em>件
-                    </div>
-                    <a href="#" class="sk_goods_buy">立即抢购</a>
-
-                </li>
-                <li class="sk_goods">
-                    <img src="upload/mobile.jpg" alt="">
-                    <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
-                    <p class="sk_goods_price">
-                        <em>￥6088</em>
-                        <del>￥6988</del></p>
-                    <div class="sk_goods_progress">
-                        已售<i>87%</i>
-                        <div class="bar">
-                            <div class="bar_in">
-                            </div>
-                        </div>
-                        剩余<em>29</em>件
-                    </div>
-                    <a href="#" class="sk_goods_buy">立即抢购</a>
-
-                </li>
-                <li class="sk_goods">
-                    <img src="upload/mobile.jpg" alt="">
-                    <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
-                    <p class="sk_goods_price">
-                        <em>￥6088</em>
-                        <del>￥6988</del></p>
-                    <div class="sk_goods_progress">
-                        已售<i>87%</i>
-                        <div class="bar">
-                            <div class="bar_in">
-                            </div>
-                        </div>
-                        剩余<em>29</em>件
-                    </div>
-                    <a href="#" class="sk_goods_buy">立即抢购</a>
-
-                </li>
-                <li class="sk_goods">
-                    <img src="upload/mobile.jpg" alt="">
-                    <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
-                    <p class="sk_goods_price">
-                        <em>￥6088</em>
-                        <del>￥6988</del></p>
-                    <div class="sk_goods_progress">
-                        已售<i>87%</i>
-                        <div class="bar">
-                            <div class="bar_in">
-                            </div>
-                        </div>
-                        剩余<em>29</em>件
-                    </div>
-                    <a href="#" class="sk_goods_buy">立即抢购</a>
-
-                </li>
-                <li class="sk_goods">
-                    <img src="upload/mobile.jpg" alt="">
-                    <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
-                    <p class="sk_goods_price">
-                        <em>￥6088</em>
-                        <del>￥6988</del></p>
-                    <div class="sk_goods_progress">
-                        已售<i>87%</i>
-                        <div class="bar">
-                            <div class="bar_in">
-                            </div>
-                        </div>
-                        剩余<em>29</em>件
-                    </div>
-                    <a href="#" class="sk_goods_buy">立即抢购</a>
-
-                </li>
-            </ul>
-        </div>
-        <!-- 分页 -->
-        <div class="page">
-            <span class="page_number">
-                <a href="#" class="page_number_prev">&lt;&lt;上一页</a>
-                <a href="#">1</a>
-                <a href="#" class="current">2</a>
-                <a href="#">3</a>
-                <a href="#">4</a>
-                <a href="#" class="dotted">...</a>
-                <a href="#" class="page_number_next">下一页&gt;&gt;</a>
-            </span>
-            <span class="page_skip">
-                共10页 到第
-                <input type="text">
-                页
-                <button>确定</button>
-            </span>
+                    <a href="#" class="arrow_next">
+                    </a>
+                    <ul class="list_item">
+                        <li><img src="upload/pre.jpg" alt=""></li>
+                        <li class="current"><img src="upload/pre.jpg" alt=""></li>
+                        <li><img src="upload/pre.jpg" alt=""></li>
+                        <li><img src="upload/pre.jpg" alt=""></li>
+                        <li><img src="upload/pre.jpg" alt=""></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 详细信息 -->
+            <div class="itemInfo_wrap fr">
+                <!-- 头部 -->
+                <div class="sku_name"></div>
+                <!-- 最新新闻 -->
+                <div class="news"></div>
+                <!-- 产品详细摘要 -->
+                <div class="summary"></div>
+            </div>
         </div>
     </div>
-
-
 
     <!-- 底部 -->
     <div class="footer">
