第四次提交

--- a/detail.html
+++ b/detail.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>拼刀刀(PDD.COM)-正品低价、品质保障、配送及时、轻松购物！</title>
+    <title>手机详情页！</title>
     <meta name="description"
         content="拼刀刀PDD.COM-专业的综合网上购物商城,销售家电、数码通讯、电脑、家居百货、服装服饰、母婴、图书、食品等数万个品牌优质商品.便捷、诚信的服务，为您提供愉悦的网上购物体验!">
     <meta name="keywords" content="网上购物,网上商城,手机,笔记本,电脑,MP3,CD,VCD,DV,相机,数码,配件,手表,存储卡,拼刀刀"">
@@ -164,14 +164,164 @@
             </div>
             <!-- 详细信息 -->
             <div class="itemInfo_wrap fr">
-                <!-- 头部 -->
-                <div class="sku_name"></div>
+                <!-- 头骨 -->
+                <div class="sku_name">iphone 6S （A1700） 64G玫瑰金色移动通信电信4G手机</div>
                 <!-- 最新新闻 -->
-                <div class="news"></div>
-                <!-- 产品详细摘要 -->
-                <div class="summary"></div>
+                <div class="news">
+                    推荐选择下方[移动优惠购]，
+                    手机套餐齐搞定，不用换号，每月还有话费返
+                </div>
+                <!-- 产品详细摘要信息 -->
+                <div class="summary">
+                    <dl class="summary_price">
+                        <dt>价格</dt>
+                        <dd>
+                            <i class="price">￥5200.00</i>
+                            <a href="#">降价通知</a>
+                            <div class="remark">累计评价6188</div>
+                        </dd>
+                    </dl>
+
+                    <dl class="summary_promotion">
+                        <dt>促销</dt>
+                        <dd>
+                            <em>加购价</em>
+                            满999.00另加20.00元，或满1999.00另加30.00元，或满2999.00另加40.00元，即可在购物车换
+                            购热销商品 详情 》
+                        </dd>
+                    </dl>
+
+                    <dl class="summary_support">
+                        <dt>支持</dt>
+                        <dd>
+                            以旧换新，闲置手机回收 4G套餐超值抢 礼品购
+                        </dd>
+                    </dl>
+                    <!-- 选择颜色 -->
+                    <dl class="choose_color">
+                        <dt>选择颜色</dt>
+                        <dd>
+                            <a href="javascript:;">金色</a>
+                            <a href="javascript:;">银色</a>
+                            <a href="javascript:;">黑色</a>
+                            <a href="javascript:;" class="current">玫瑰金</a>
+                        </dd>
+                    </dl>
+
+                    <!-- 选择版本 -->
+                    <dl class="choose_version">
+                        <dt>选择版本</dt>
+                        <dd>
+                            <a href="javascript:;" class="current">公开版</a>
+                            <a href="javascript:;">移动4G</a>
+                        </dd>
+                    </dl>
+
+                    <!-- 购买方式 -->
+                    <dl class="choose_type">
+                        <dt>购买方式</dt>
+                        <dd>
+                            <a href="javascript:;" class="current">官方标配</a>
+                            <a href="javascript:;">移动优惠购</a>
+                            <a href="javascript:;">电信优惠购</a>
+                        </dd>
+                    </dl>
+
+                    <!-- 加入购物车 -->
+                    <div class="choose_btns">
+                        <div class="choose_amount">
+                            <input type="text" value="1">
+                            <a href="javascript:;" class="add">+</a>
+                            <a href="javascript:;" class="reduce">-</a>
+                        </div>
+                        <a href="#" class="addcar">加入购物车</a>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <!-- 产品细节模块 -->
+        <div class="product_detail">
+            <div class="aside">
+                <div class="tab_list">
+                    <ul>
+                        <li class="first_tab current">相关分类</li>
+                        <li class="second_tab">推荐品牌</li>
+                    </ul>
+                </div>
+                <div class="tab_con">
+                    <ul>
+                        <li>
+                            <img src="upload/aside_img.jpg" alt="">
+                            <h5>华为 HUAWEI P20 Pro 全面屏徕卡</h5>
+                            <div class="aside_price">￥19</div>
+                            <a href="#" class="as_addcar">加入购物车</a>
+                        </li>
+
+                        <li>
+                            <img src="upload/aside_img.jpg" alt="">
+                            <h5>华为 HUAWEI P20 Pro 全面屏徕卡</h5>
+                            <div class="aside_price">￥19</div>
+                            <a href="#" class="as_addcar">加入购物车</a>
+                        </li>
+
+                        <li>
+                            <img src="upload/aside_img.jpg" alt="">
+                            <h5>华为 HUAWEI P20 Pro 全面屏徕卡</h5>
+                            <div class="aside_price">￥19</div>
+                            <a href="#" class="as_addcar">加入购物车</a>
+                        </li>
+
+                        <li>
+                            <img src="upload/aside_img.jpg" alt="">
+                            <h5>华为 HUAWEI P20 Pro 全面屏徕卡</h5>
+                            <div class="aside_price">￥19</div>
+                            <a href="#" class="as_addcar">加入购物车</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="detail">
+                <div class="detail_tab_list">
+                    <ul>
+                        <li class="current">商品介绍</li>
+                        <li>规格与包装</li>
+                        <li>售后保障</li>
+                        <li>商品评价（50000）</li>
+                        <li>手机社区</li>
+                    </ul>
+                </div>
+                <div class="detail_tab_con">
+                    <div class="item">
+                        <ul class="item_info">
+                            <li>分辨率：1920*1080(FHD)</li>
+                            <li>后置摄像头：1200万像素</li>
+                            <li>前置摄像头：500万像素</li>
+                            <li>核 数：其他</li>
+                            <li>频 率：以官网信息为准</li>
+                            <li>品牌： Apple ♥关注</li>
+                            <li>商品名称：APPLEiPhone 6s Plus</li>
+                            <li>商品编号：1861098</li>
+                            <li>商品毛重：0.51kg</li>
+                            <li>商品产地：中国大陆</li>
+                            <li>热点：指纹识别，Apple Pay，金属机身，拍照神器</li>
+                            <li>系统：苹果（IOS）</li>
+                            <li>像素：1000-1600万</li>
+                            <li>机身内存：64GB</li>
+                        </ul>
+                        <p><a href="#" class="more fr">查看更多参数</a></p>
+                        <img src="upload/detail_img1.jpg" alt="">
+                        <img src="upload/detail_img2.jpg" alt="">
+                        <img src="upload/detail_img3.jpg" alt="">
+                    </div>
+                    <!-- <div class="item">规格与包装</div>
+                    <div class="item">售后保障</div>
+                    <div class="item">商品评价（50000）</div>
+                    <div class="item">手机社区</div> -->
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <!-- 底部 -->
