--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="css/common.css">
     <!-- 引入首页样式 -->
     <link rel="stylesheet" href="css/index.css">
+    <script src="js/animate.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/index.js"></script>
 </head>
 
 <body>
@@ -86,10 +89,12 @@
             <a href="#">家居日用</a>
         </div>
         <div class="shopcar">
-            <i class="car"></i>
-            我的购物车
-            <i class="arrow"></i>
-            <i class="count">80</i>
+            <a href="shopcar.html">
+                <i class="car"></i>
+                我的购物车
+                <i class="arrow"></i>
+                <i class="count">80</i>
+            </a>
         </div>
     </div>
     <div class="nav">
@@ -98,21 +103,21 @@
                 <div class="dt">商品分类</div>
                 <div class="dd">
                     <ul>
-                        <li class="menu_item"><a href="#">家用电器</a><i class="fr"></i></li>
+                        <li class="menu_item"><a href="list.html">家用电器</a><i class="fr"></i></li>
                         <li class="menu_item"><a href="list.html">手机、数码、通信</a><i class="fr"></i></li>
-                        <li class="menu_item"><a href="#">电脑、办公</a> <i></i> </li>
-                        <li class="menu_item"><a href="#">家居、家具、家装、厨具</a> <i></i> </li>
-                        <li class="menu_item"><a href="#">男装、女装、童装、内衣</a> <i></i> </li>
-                        <li class="menu_item"><a href="#">个户化妆、清洁用品、宠物</a> <i></i> </li>
-                        <li class="menu_item"><a href="#">鞋靴、箱包、珠宝、奢侈品</a> <i></i> </li>
-                        <li class="menu_item"><a href="#">运动户外、钟表</a> <i></i> </li>
-                        <li class="menu_item"><a href="#">汽车、汽车用品</a> <i></i> </li>
-                        <li class="menu_item"><a href="#">母婴、玩具乐器</a> <i></i> </li>
-                        <li class="menu_item"><a href="#">食品、酒类、生鲜、特产</a> <i></i> </li>
-                        <li class="menu_item"><a href="#">医药保健</a> <i></i> </li>
-                        <li class="menu_item"><a href="#">图书、音像、电子书</a> <i></i> </li>
-                        <li class="menu_item"><a href="#">彩票、旅行、充值、票务</a> <i></i> </li>
-                        <li class="menu_item"><a href="#">理财、众筹、白条、保险</a> <i></i> </li>
+                        <li class="menu_item"><a href="list.html">电脑、办公</a> <i></i> </li>
+                        <li class="menu_item"><a href="list.html">家居、家具、家装、厨具</a> <i></i> </li>
+                        <li class="menu_item"><a href="list.html">男装、女装、童装、内衣</a> <i></i> </li>
+                        <li class="menu_item"><a href="list.html">个户化妆、清洁用品、宠物</a> <i></i> </li>
+                        <li class="menu_item"><a href="list.html">鞋靴、箱包、珠宝、奢侈品</a> <i></i> </li>
+                        <li class="menu_item"><a href="list.html">运动户外、钟表</a> <i></i> </li>
+                        <li class="menu_item"><a href="list.html">汽车、汽车用品</a> <i></i> </li>
+                        <li class="menu_item"><a href="list.html">母婴、玩具乐器</a> <i></i> </li>
+                        <li class="menu_item"><a href="list.html">食品、酒类、生鲜、特产</a> <i></i> </li>
+                        <li class="menu_item"><a href="list.html">医药保健</a> <i></i> </li>
+                        <li class="menu_item"><a href="list.html">图书、音像、电子书</a> <i></i> </li>
+                        <li class="menu_item"><a href="list.html">彩票、旅行、充值、票务</a> <i></i> </li>
+                        <li class="menu_item"><a href="list.html">理财、众筹、白条、保险</a> <i></i> </li>
 
                     </ul>
                 </div>
@@ -134,20 +139,27 @@
     <div class="w">
         <div class="main">
             <div class="focus fl">
-                <a href="#" class="arrow-l"></a>
-                <a href="#" class="arrow-r"></a>
+                <!-- 左侧按钮 -->
+                <a href="javascript:;" class="arrow-l"></a>
+                <!-- 右侧按钮 -->
+                <a href="javascript:;" class="arrow-r"></a>
+                <!-- 核心的滚动区域 -->
                 <ul>
-                    <li><a href="#"><img src="upload/focus.jpg" alt=""></a></li>
+                    <li>
+                        <a href="#"><img src="upload/focus.jpg" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="upload/focus1.jpg" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="upload/focus2.jpg" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="upload/focus3.jpg" alt=""></a>
+                    </li>
                 </ul>
                 <ol class="circle">
-                    <li></li>
-                    <li class="current"></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+
                 </ol>
             </div>
             <div class="newsflash fr">
@@ -227,7 +239,7 @@
                     </ul>
                 </div>
                 <div class="bargain">
-                    <img src="upload/bargain.jpg" alt="">
+                    <img data-lazy-src="upload/bargain.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -235,15 +247,15 @@
         <!-- 推荐模块 -->
         <div class="recommend w">
             <div class="recom-hd">
-                <img src="img/clock.png" alt="">
+                <img data-lazy-src="img/clock.png" alt="">
                 <h3>今日推荐</h3>
             </div>
             <div class="recom-bd">
                 <ul>
-                    <li><a href="#"><img src="upload/pic.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="upload/pic.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="upload/pic.jpg" alt=""></a></li>
-                    <li class="last"><a href="#"><img src="upload/pic.jpg" alt=""></a></li>
+                    <li><a href="#"><img data-lazy-src="upload/pic.jpg" alt=""></a></li>
+                    <li><a href="#"><img data-lazy-src="upload/pic.jpg" alt=""></a></li>
+                    <li><a href="#"><img data-lazy-src="upload/pic.jpg" alt=""></a></li>
+                    <li class="last"><a href="#"><img data-lazy-src="upload/pic.jpg" alt=""></a></li>
                 </ul>
             </div>
         </div>
@@ -280,41 +292,41 @@
                                 <li><a href="#">滚筒洗衣机</a></li>
                                 <li><a href="#">电热水器</a></li>
                             </ul>
-                            <a href="#"><img src="upload/floor-1-1.png" alt=""></a>
+                            <a href="#"><img data-lazy-src="upload/floor-1-1.png" alt=""></a>
                         </li>
                         <li class="w329">
-                            <img src="upload/pic1.jpg" alt="">
+                            <img data-lazy-src="upload/pic1.jpg" alt="">
                         </li>
                         <li class="w219">
                             <div class="tab-con-item">
                                 <a href="#">
-                                    <img src="upload/floor-1-2.png" alt="">
+                                    <img data-lazy-src="upload/floor-1-2.png" alt="">
                                 </a>
                             </div>
 
                             <div class="tab-con-item">
                                 <a href="#">
-                                    <img src="upload/floor-1-3.png" alt="">
+                                    <img data-lazy-src="upload/floor-1-3.png" alt="">
                                 </a>
                             </div>
                         </li>
                         <li class="w220">
                             <div class="tab-con-item">
                                 <a href="#">
-                                    <img src="upload/floor-1-4.png" alt="">
+                                    <img data-lazy-src="upload/floor-1-4.png" alt="">
                                 </a>
                             </div>
                         </li>
                         <li class="w220">
                             <div class="tab-con-item">
                                 <a href="#">
-                                    <img src="upload/floor-1-5.png" alt="">
+                                    <img data-lazy-src="upload/floor-1-5.png" alt="">
                                 </a>
                             </div>
 
                             <div class="tab-con-item">
                                 <a href="#">
-                                    <img src="upload/floor-1-6.png" alt="">
+                                    <img data-lazy-src="upload/floor-1-6.png" alt="">
                                 </a>
                             </div>
                         </li>
@@ -360,41 +372,41 @@
                                 <li><a href="#">滚筒洗衣机</a></li>
                                 <li><a href="#">电热水器</a></li>
                             </ul>
-                            <a href="#"><img src="upload/floor-1-1.png" alt=""></a>
+                            <a href="#"><img data-lazy-src="upload/floor-1-1.png" alt=""></a>
                         </li>
                         <li class="w329">
-                            <img src="upload/pic1.jpg" alt="">
+                            <img data-lazy-src="upload/pic1.jpg" alt="">
                         </li>
                         <li class="w219">
                             <div class="tab-con-item">
                                 <a href="#">
-                                    <img src="upload/floor-1-2.png" alt="">
+                                    <img data-lazy-src="upload/floor-1-2.png" alt="">
                                 </a>
                             </div>
 
                             <div class="tab-con-item">
                                 <a href="#">
-                                    <img src="upload/floor-1-3.png" alt="">
+                                    <img data-lazy-src="upload/floor-1-3.png" alt="">
                                 </a>
                             </div>
                         </li>
                         <li class="w220">
                             <div class="tab-con-item">
                                 <a href="#">
-                                    <img src="upload/floor-1-4.png" alt="">
+                                    <img data-lazy-src="upload/floor-1-4.png" alt="">
                                 </a>
                             </div>
                         </li>
                         <li class="w220">
                             <div class="tab-con-item">
                                 <a href="#">
-                                    <img src="upload/floor-1-5.png" alt="">
+                                    <img data-lazy-src="upload/floor-1-5.png" alt="">
                                 </a>
                             </div>
 
                             <div class="tab-con-item">
                                 <a href="#">
-                                    <img src="upload/floor-1-6.png" alt="">
+                                    <img data-lazy-src="upload/floor-1-6.png" alt="">
                                 </a>
                             </div>
                         </li>
@@ -515,7 +527,7 @@
                 <dl class="mod_help_list mod_help_app">
                     <dt>帮助中心</dt>
                     <dd>
-                        <img src="upload/erweima.png" alt="">
+                        <img data-lazy-src="upload/erweima.png" alt="">
                     </dd>
                     <p>拼刀刀客户端</p>
                 </dl>
@@ -536,5 +548,19 @@
 
     </div>
 </body>
+
+<!-- 必须在这里引入我们的懒加载插件 -->
+<script src="js/EasyLazyload.min.js"></script>
+<script>
+    lazyLoadInit({
+        showTime: 1100,
+        onLoadBackEnd: function (i, e) {
+            console.log("onLoadBackEnd:" + i);
+        },
+        onLoadBackStart: function (i, e) {
+            console.log("onLoadBackStart:" + i);
+        }
+    });
+</script>
 
 </html>
