--- a/list.html
+++ b/list.html
@@ -88,10 +88,12 @@
             <a href="#">家居日用</a>
         </div>
         <div class="shopcar">
-            <i class="car"></i>
-            我的购物车
-            <i class="arrow"></i>
-            <i class="count">80</i>
+            <a href="shopcar.html">
+                <i class="car"></i>
+                我的购物车
+                <i class="arrow"></i>
+                <i class="count">80</i>
+            </a>
         </div>
     </div>
     <div class="nav">
@@ -148,8 +150,10 @@
 
                 </li>
                 <li class="sk_goods">
-                    <img src="upload/mobile.jpg" alt="">
-                    <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
+                    <a href="detail.html">
+                        <img src="upload/mobile.jpg" alt="">
+                        <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
+                    </a>
                     <p class="sk_goods_price">
                         <em>￥6088</em>
                         <del>￥6988</del></p>
@@ -165,8 +169,10 @@
 
                 </li>
                 <li class="sk_goods">
-                    <img src="upload/mobile.jpg" alt="">
-                    <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
+                    <a href="detail.html">
+                        <img src="upload/mobile.jpg" alt="">
+                        <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
+                    </a>
                     <p class="sk_goods_price">
                         <em>￥6088</em>
                         <del>￥6988</del></p>
@@ -182,8 +188,10 @@
 
                 </li>
                 <li class="sk_goods">
-                    <img src="upload/mobile.jpg" alt="">
-                    <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
+                    <a href="detail.html">
+                        <img src="upload/mobile.jpg" alt="">
+                        <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
+                    </a>
                     <p class="sk_goods_price">
                         <em>￥6088</em>
                         <del>￥6988</del></p>
@@ -199,8 +207,10 @@
 
                 </li>
                 <li class="sk_goods">
-                    <img src="upload/mobile.jpg" alt="">
-                    <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
+                    <a href="detail.html">
+                        <img src="upload/mobile.jpg" alt="">
+                        <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
+                    </a>
                     <p class="sk_goods_price">
                         <em>￥6088</em>
                         <del>￥6988</del></p>
@@ -216,8 +226,10 @@
 
                 </li>
                 <li class="sk_goods">
-                    <img src="upload/mobile.jpg" alt="">
-                    <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
+                    <a href="detail.html">
+                        <img src="upload/mobile.jpg" alt="">
+                        <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
+                    </a>
                     <p class="sk_goods_price">
                         <em>￥6088</em>
                         <del>￥6988</del></p>
@@ -233,8 +245,10 @@
 
                 </li>
                 <li class="sk_goods">
-                    <img src="upload/mobile.jpg" alt="">
-                    <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
+                    <a href="detail.html">
+                        <img src="upload/mobile.jpg" alt="">
+                        <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
+                    </a>
                     <p class="sk_goods_price">
                         <em>￥6088</em>
                         <del>￥6988</del></p>
@@ -250,8 +264,10 @@
 
                 </li>
                 <li class="sk_goods">
-                    <img src="upload/mobile.jpg" alt="">
-                    <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
+                    <a href="detail.html">
+                        <img src="upload/mobile.jpg" alt="">
+                        <h5 class="sk_goods_title">Apple苹果iPhone 6s Plus（A1699） 32G 金色 移动联通电信4G手机</h5>
+                    </a>
                     <p class="sk_goods_price">
                         <em>￥6088</em>
                         <del>￥6988</del></p>
